# phaeton

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  build.sh  deny.toml  lcov.info  mutants.toml  phaeton_config.sample.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/package-tarball/: action.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_modbus.rs
scripts/: check-budgets.sh
src/: config.rs  config_tests.rs  controls.rs  dbus.rs  driver.rs  error.rs  lib.rs  logging.rs  main.rs  modbus.rs  persistence.rs  session.rs  tibber.rs  updater.rs  vehicle.rs  web.rs  web_axum.rs  web_schema.rs  web_tests.rs
src/config/: defaults.rs
src/dbus/: ev_charger.rs  items.rs  root.rs  service.rs  shared.rs  util.rs
src/driver/: commands.rs  dbus_helpers.rs  modbus_like.rs  pv.rs  runtime.rs  runtime_arc.rs  runtime_poll.rs  snapshot.rs  types.rs
src/driver/runtime_poll/: io.rs  meas.rs  phase.rs  status.rs  tests.rs
src/logging/: broadcast.rs  level.rs  state.rs  structured.rs
src/tibber/: api.rs  client.rs  mod.rs  types.rs
src/updater/: package.rs
src/web/: logs.rs
tests/: config_io_validate_test.rs  controls_schedule_active_test.rs  controls_test.rs  error_constructors_test.rs  logging_tests.rs  modbus_errors_test.rs  modbus_test.rs  persistence_test.rs  runtime_override_test.rs  session_restore_test.rs  session_test.rs  tibber_logic_test.rs  tibber_test.rs  updater_test.rs  vehicle_clients_test.rs  vehicle_integration_success_test.rs  vehicle_updater_test.rs  web_logs_stream_test.rs  web_schema_test.rs
webui/: app.js  base.css  chart.css  components.css  config.css  dashboard.css  index.html  layout.css  logs.css  updates.css
webui/js/: chart.js  config.js  controls.js  health.js  helpers.js  status.js  tibber.js  ux.js
