[package]
name = "phaeton"
version = "0.1.0"
edition = "2024"
description = "Alfen EV Charger Driver for Victron Venus OS - Rust rewrite"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
keywords = ["ev", "charger", "modbus", "victron", "venus"]
categories = ["embedded", "api-bindings"]
repository = "https://github.com/your-org/phaeton"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Modbus TCP client
tokio-modbus = { version = "0.16", features = ["tcp"] }

# Web framework - using warp for now as it's more stable
warp = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Configuration
config = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# D-Bus integration for Venus OS
zbus = { version = "4.0", default-features = false, features = ["tokio"] }

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"

# File system and persistence
# tokio-fs is now part of tokio
fs-err = "3.1"
directories = "6.0"

# Git operations for self-updates
# Use vendored libgit2 and OpenSSL to avoid needing system -dev packages in CI/cross builds
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

# Environment and process management
dotenvy = "0.15"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
jwt = "0.16"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockito = "1.2"
criterion = "0.7"
proptest = "1.4"

# Performance benchmarking
# [[bench]]
# name = "modbus_benchmark"
# harness = false

# Build configuration
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Cross-compilation target for Venus OS (ARM)
[package.metadata.cross]
targets = ["armv7-unknown-linux-gnueabihf"]

# Metadata for packaging
[package.metadata.deb]
name = "phaeton"
maintainer = "Your Name <your.email@example.com>"
copyright = "2024, Your Organization"
license-file = ["LICENSE", "0"]
depends = "libc6 (>= 2.15)"
section = "admin"
priority = "optional"
assets = [
    ["target/release/phaeton", "usr/bin/phaeton", "755"],
    ["README.md", "usr/share/doc/phaeton/README.md", "644"],
    ["docs/*", "usr/share/doc/phaeton/", "644"],
]
