[package]
name = "phaeton-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.phaeton]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_modbus"
path = "fuzz_targets/fuzz_decode_modbus.rs"
test = false
doc = false
bench = false
